--- a/package.json
+++ b/package.json
@@ -269,6 +269,7 @@
     "vue-tour": "1.1.0",
     "vue2-animate": "2.1.0",
     "vuedraggable": "2.16.0",
+    "vuescroll": "4.9.0-beta.14",
     "vuetify": "1.3.8",
     "vuex": "3.0.1",
     "vuex-pathify": "1.1.3",
