--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -39,6 +39,9 @@ defaults:
       darkMode: false
     # System defaults
     setup: false
+    paths:
+      content: ./content
+      data: ./data
     cors:
       credentials: true
       maxAge: 600
