--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,7 @@ insert_final_newline = true
 
 [*.{jade,pug,md}]
 trim_trailing_whitespace = false
+
+[Makefile]
+indent_style = tab
+indent_size = 4
