--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "eslint --format codeframe --ext .js,.vue . && pug-lint server/views && jest",
     "docker:dev:up": "docker-compose -f ./dev/docker/docker-compose.yml -p wiki --project-directory . up -d && docker-compose -f ./dev/docker/docker-compose.yml -p wiki --project-directory . exec wiki yarn dev",
     "docker:dev:down": "docker-compose -f ./dev/docker/docker-compose.yml -p wiki --project-directory . down",
-    "docker:dev:rebuild": "docker-compose -f ./dev/docker/docker-compose.yml -p wiki --project-directory . build --no-cache --force-rm",
+    "docker:dev:rebuild": "rmdir node_modules /s /q && docker-compose -f ./dev/docker/docker-compose.yml -p wiki --project-directory . build --no-cache --force-rm",
     "docker:build": "docker-compose -f ./dev/docker/docker-compose.yml -p wiki --project-directory . run wiki yarn build && docker-compose -f ./dev/docker/docker-compose.yml -p wiki --project-directory . down"
   },
   "bin": {
@@ -59,6 +59,7 @@
     "connect-redis": "3.4.0",
     "cookie-parser": "1.4.3",
     "cors": "2.8.5",
+    "custom-error-instance": "2.1.1",
     "dependency-graph": "0.7.2",
     "diff": "3.5.0",
     "diff2html": "2.5.0",
@@ -154,6 +155,7 @@
     "subscriptions-transport-ws": "0.9.15",
     "uslug": "1.0.4",
     "uuid": "3.3.2",
+    "validate.js": "0.12.0",
     "validator": "10.9.0",
     "validator-as-promised": "1.0.2",
     "winston": "3.1.0",
@@ -284,7 +286,8 @@
     "webpack-subresource-integrity": "1.3.0",
     "whatwg-fetch": "3.0.0",
     "write-file-webpack-plugin": "4.4.1",
-    "xterm": "3.8.0"
+    "xterm": "3.8.0",
+    "zxcvbn": "4.4.2"
   },
   "browserslist": [
     "> 1%",
