--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "wiki",
-  "version": "2.0.0",
+  "version": "2.0.0-beta.1",
+  "releaseDate": "2019-01-01T01:01:01.000Z",
   "description": "A modern, lightweight and powerful wiki app built on NodeJS, Git and Markdown",
   "main": "wiki.js",
   "scripts": {
