fix: root admin access deny bug + patreon link

--- a/dev/docker/Dockerfile
+++ b/dev/docker/Dockerfile
@@ -1,14 +1,14 @@
 # -- DEV DOCKERFILE --
 # -- DO NOT USE IN PRODUCTION! --
 
-FROM node:10.14-alpine
+FROM node:10-alpine
 LABEL maintainer "requarks.io"
 
 RUN apk update && \
     apk add bash curl git python make g++ --no-cache && \
-    mkdir -p /var/wiki
+    mkdir -p /wiki
 
-WORKDIR /var/wiki
+WORKDIR /wiki
 COPY package.json .
 RUN yarn --silent
 COPY ./dev/docker/init.sh ./init.sh
