--- a/.editorconfig
+++ b/.editorconfig
@@ -5,6 +5,7 @@ indent_style = space
 indent_size = 2
 charset = utf-8
 trim_trailing_whitespace = true
+end_of_line = lf
 insert_final_newline = true
 
 [*.{jade,pug,md}]
