--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "cheerio": "1.0.0-rc.2",
     "child-process-promise": "2.2.1",
     "chokidar": "2.0.4",
+    "clean-css": "4.2.1",
     "compression": "1.7.3",
     "connect-redis": "3.4.0",
     "cookie-parser": "1.4.3",
@@ -179,7 +180,6 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@panter/vue-i18next": "0.13.0",
-    "@vue/cli": "3.1.3",
     "animated-number-vue": "0.1.3",
     "apollo-cache-inmemory": "1.3.10",
     "apollo-client": "2.4.6",
