--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
     "scim-query-filter-parser": "1.1.0",
     "semver": "5.6.0",
     "serve-favicon": "2.5.0",
+    "simple-git": "1.107.0",
     "sqlite3": "4.0.6",
     "subscriptions-transport-ws": "0.9.15",
     "twemoji": "11.2.0",
