--- a/package.json
+++ b/package.json
@@ -254,7 +254,6 @@
     "style-loader": "0.23.1",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
-    "terser": "3.14.1",
     "twemoji-awesome": "1.0.6",
     "url-loader": "1.1.2",
     "vee-validate": "2.1.7",
@@ -292,6 +291,9 @@
     "write-file-webpack-plugin": "4.5.0",
     "xterm": "3.11.0",
     "zxcvbn": "4.4.2"
+  },
+  "resolutions": {
+    "terser": "3.14.1"
   },
   "browserslist": [
     "> 1%",
