--- a/dev/docker-mssql/docker-compose.yml
+++ b/dev/docker-mssql/docker-compose.yml
@@ -14,19 +14,19 @@ services:
       - wikinet
 
   db:
-    image: postgres:9-alpine
+    image: mcr.microsoft.com/mssql/server:2017-latest
     environment:
-      POSTGRES_DB: wiki
-      POSTGRES_PASSWORD: wikijsrocks
-      POSTGRES_USER: wikijs
+      ACCEPT_EULA: 'Y'
+      MSSQL_PID: Developer
+      SA_PASSWORD: W1kiJSR0cks!
     logging:
       driver: "none"
     volumes:
-      - db-data:/var/lib/postgresql/data
+      - db-data:/var/opt/mssql
     networks:
       - wikinet
     ports:
-      - "15432:5432"
+      - "11433:1433"
 
   adminer:
     image: adminer:latest
@@ -40,7 +40,7 @@ services:
   wiki:
     build:
       context: .
-      dockerfile: dev/docker/Dockerfile
+      dockerfile: dev/docker-mssql/Dockerfile
     depends_on:
       - db
       - redis
@@ -51,7 +51,7 @@ services:
     volumes:
       - .:/wiki
       - /wiki/node_modules
-    command: ["sh", "./dev/docker/init.sh"]
+    command: ["sh", "./dev/docker-mssql/init.sh"]
 
 networks:
   wikinet:
