--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "moment": "2.24.0",
     "moment-timezone": "0.5.23",
     "mongodb": "3.1.13",
-    "mssql": "4.3.0",
+    "mssql": "5.0.0-beta.1",
     "multer": "1.4.1",
     "mysql2": "1.6.4",
     "nanoid": "2.0.1",
