feat: dev flags

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -33,6 +33,8 @@ defaults:
     theming:
       theme: 'default'
       darkMode: false
+    flags:
+      sqllog: false
     # System defaults
     setup: false
     paths:
