--- a/server/modules/storage/git/definition.yml
+++ b/server/modules/storage/git/definition.yml
@@ -69,3 +69,7 @@ props:
     default: 'John Smith'
     hint: 'Used as fallback in case the author of the change is not present.'
     order: 21
+actions:
+  - handler: syncUntracked
+    label: Add Untracked Changes
+    hint: Output all content from the DB to the Git repo to ensure all untracked content is saved. If you enabled Git after content was created or you temporarily disabled Git, you'll want to execute this action to add the missing untracked changes.
