--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "dependency-graph": "0.8.0",
     "diff": "4.0.1",
     "diff2html": "2.7.0",
-    "dotize": "^0.3.0",
+    "dotize": "0.3.0",
+    "elasticsearch": "15.4.1",
     "express": "4.16.4",
     "express-brute": "1.0.1",
     "file-type": "10.7.1",
@@ -146,6 +147,7 @@
     "semver": "5.6.0",
     "serve-favicon": "2.5.0",
     "simple-git": "1.107.0",
+    "solr-node": "1.1.3",
     "sqlite3": "4.0.6",
     "subscriptions-transport-ws": "0.9.15",
     "twemoji": "11.3.0",
