--- a/server/modules/search/db/definition.yml
+++ b/server/modules/search/db/definition.yml
@@ -1,6 +1,6 @@
 key: db
-title: Database (built-in)
-description: Default database-based search engine.
+title: Database - Basic
+description: Default basic database-based search engine.
 author: requarks.io
 logo: https://static.requarks.io/logo/database.svg
 website: https://www.requarks.io/
