feat: postgres search engine

--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "pem-jwk": "2.0.0",
     "pg": "7.8.0",
     "pg-hstore": "2.3.2",
+    "pg-tsquery": "8.0.3",
     "pm2": "3.2.9",
     "pug": "2.0.3",
     "qr-image": "3.2.0",
