feat: azure search module + rebuild index

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "apollo-server-express": "2.3.3",
     "auto-load": "3.0.4",
     "axios": "0.18.0",
+    "azure-search-client": "3.1.5",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.5.3",
     "body-parser": "1.18.3",
@@ -136,6 +137,7 @@
     "pg": "7.8.0",
     "pg-hstore": "2.3.2",
     "pg-tsquery": "8.0.3",
+    "pg-query-stream": "2.0.0",
     "pm2": "3.2.9",
     "pug": "2.0.3",
     "qr-image": "3.2.0",
