--- a/server/modules/search/db/definition.yml
+++ b/server/modules/search/db/definition.yml
@@ -4,4 +4,5 @@ description: Default basic database-based search engine.
 author: requarks.io
 logo: https://static.requarks.io/logo/database.svg
 website: https://www.requarks.io/
+isAvailable: true
 props: {}
