--- a/server/modules/search/sphinx/definition.yml
+++ b/server/modules/search/sphinx/definition.yml
@@ -4,4 +4,5 @@ description: Sphinx is an open source full text search server, designed from the
 author: requarks.io
 logo: https://static.requarks.io/logo/sphinx.svg
 website: http://sphinxsearch.com/
+isAvailable: false
 props: {}
