--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "apollo-server": "2.3.3",
     "apollo-server-express": "2.3.3",
     "auto-load": "3.0.4",
+    "aws-sdk": "2.420.0",
     "axios": "0.18.0",
     "azure-search-client": "3.1.5",
     "bcryptjs-then": "1.0.1",
