fix: UI improvements

--- a/package.json
+++ b/package.json
@@ -137,8 +137,8 @@
     "pem-jwk": "2.0.0",
     "pg": "7.8.0",
     "pg-hstore": "2.3.2",
-    "pg-tsquery": "8.0.3",
     "pg-query-stream": "2.0.0",
+    "pg-tsquery": "8.0.3",
     "pm2": "3.2.9",
     "pug": "2.0.3",
     "qr-image": "3.2.0",
@@ -178,6 +178,7 @@
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
     "@panter/vue-i18next": "0.15.0",
+    "animate-sass": "0.8.2",
     "animated-number-vue": "0.1.4",
     "apollo-cache-inmemory": "1.4.2",
     "apollo-client": "2.4.12",
