--- a/server/modules/search/algolia/definition.yml
+++ b/server/modules/search/algolia/definition.yml
@@ -4,7 +4,7 @@ description: Algolia is a powerful search-as-a-service solution, made easy to us
 author: requarks.io
 logo: https://static.requarks.io/logo/algolia.svg
 website: https://www.algolia.com/
-isAvailable: false
+isAvailable: true
 props:
   appId:
     type: String
