fix: sonarqube project key

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=Requarks_wiki
+sonar.projectKey=wiki
 sonar.organization=requarks
 sonar.host.url=https://sonarcloud.io
 sonar.sources=./server,./client
