--- a/package.json
+++ b/package.json
@@ -216,6 +216,9 @@
     "eslint-plugin-standard": "4.0.0",
     "eslint-plugin-vue": "5.1.0",
     "file-loader": "3.0.1",
+    "filepond": "4.2.0",
+    "filepond-plugin-file-validate-type": "1.2.2",
+    "filepond-plugin-image-preview": "4.0.3",
     "filesize.js": "1.0.2",
     "grapesjs": "0.14.52",
     "graphiql": "0.12.0",
@@ -264,6 +267,7 @@
     "vue-chartjs": "3.4.0",
     "vue-clipboards": "1.2.4",
     "vue-codemirror": "4.0.6",
+    "vue-filepond": "5.0.0",
     "vue-hot-reload-api": "2.3.1",
     "vue-loader": "15.6.2",
     "vue-material-design-icons": "3.0.0",
