--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "diff2html": "2.7.0",
     "dotize": "0.3.0",
     "elasticsearch": "15.4.1",
+    "emoji-regex": "8.0.0",
     "express": "4.16.4",
     "express-brute": "1.0.1",
     "file-type": "10.7.1",
@@ -154,6 +155,7 @@
     "simple-git": "1.107.0",
     "solr-node": "1.1.3",
     "sqlite3": "4.0.6",
+    "striptags": "3.1.1",
     "subscriptions-transport-ws": "0.9.15",
     "twemoji": "11.3.0",
     "uslug": "1.0.4",
