feat: admin auth + config ref + modules sidebar ui + GQL upload (wip)

--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "graphql-rate-limit-directive": "0.1.0",
     "graphql-subscriptions": "1.0.0",
     "graphql-tools": "4.0.4",
+    "graphql-upload": "8.0.5",
     "highlight.js": "9.14.2",
     "i18next": "14.0.1",
     "i18next-express-middleware": "1.7.1",
@@ -192,6 +193,7 @@
     "apollo-link-http": "1.5.11",
     "apollo-link-persisted-queries": "0.2.2",
     "apollo-link-ws": "1.0.14",
+    "apollo-upload-client": "10.0.0",
     "apollo-utilities": "1.1.2",
     "autoprefixer": "9.4.7",
     "babel-eslint": "10.0.1",
@@ -221,7 +223,6 @@
     "file-loader": "3.0.1",
     "filepond": "4.2.0",
     "filepond-plugin-file-validate-type": "1.2.2",
-    "filepond-plugin-image-preview": "4.0.3",
     "filesize.js": "1.0.2",
     "grapesjs": "0.14.52",
     "graphiql": "0.12.0",
