--- a/server/modules/authentication/local/definition.yml
+++ b/server/modules/authentication/local/definition.yml
@@ -5,5 +5,6 @@ author: requarks.io
 logo: https://static.requarks.io/logo/wikijs.svg
 color: yellow darken-3
 website: https://wiki.js.org
+isAvailable: true
 useForm: true
 props: {}
